# Fast-Vortex-Particles

./: CMakeLists.txt  README.md
solver/: CMakeLists.txt  barneshut.cpp  barneshut.h  solver.cpp
